trying to git ignore enviroment variables

--- a/.gitignore
+++ b/.gitignore
@@ -9,8 +9,6 @@ lerna-debug.log*
 # Diagnostic reports (https://nodejs.org/api/report.html)
 report.[0-9]*.[0-9]*.[0-9]*.[0-9]*.json
 
-./config/config.env
-
 # Runtime data
 pids
 *.pid
@@ -71,7 +69,7 @@ typings/
 .yarn-integrity
 
 # dotenv environment variables file
-.env
+config/config.env
 .env.test
 
 # parcel-bundler cache (https://parceljs.org/)
